# gazebo_moveit2

./: .gitignore  README.md  build.sh  packages-select-build.sh  test.sh
.vscode copy/: c_cpp_properties.json  launch.json  settings.json  tasks.json
src/aubo/: CMakeLists.txt  package.xml
src/aubo/launch/: gz.launch.py
src/aubo_description/: CMakeLists.txt
src/aubo_description/scripts/: xacro2sdf.bash  xacro2sdf_direct.bash
src/aubo_description/urdf/: aubo_i10.urdf  aubo_i10.urdf.xacro  model.sdf  model2.sdf
src/aubo_follow_target/: CMakeLists.txt  package.xml
src/aubo_follow_target/include/: aubo_follow_target.h
src/aubo_follow_target/src/: aubo_follow_target.cpp
src/aubo_moveit_config/: .setup_assistant  CMakeLists.txt  package.xml
src/aubo_moveit_config/config/: aubo_i10.ros2_control.xacro  aubo_i10.srdf  aubo_i10.urdf.xacro  initial_positions.yaml  kinematics.yaml  moveit.rviz  ros2_controllers.yaml
src/aubo_moveit_config/launch/: demo.launch.py  move_group.launch.py  moveit_rviz.launch.py  rsp.launch.py  setup_assistant.launch.py  spawn_controllers.launch.py  static_virtual_joint_tfs.launch.py  warehouse_db.launch.py
src/aubo_moveit_config/worlds/: follow_target.sdf
src/calibration/: CMakeLists.txt  package.xml
src/calibration/res/calib_board/: model.config  model.sdf
src/calibration/res/calib_board/scripts/: aruco.material
src/mobile_manipulator/: CMakeLists.txt  package.xml
src/mobile_manipulator/config/: diff_drive_controller_velocity.yaml  ros_gz_bridge.yaml
src/mobile_manipulator/launch/: diff_drive_example.launch.py
src/mobile_manipulator/src/: example_diff_drive.cpp
src/mobile_manipulator/urdf/: simple_diff_drive.xacro.urdf
src/moveit_assistant/: .setup_assistant  CMakeLists.txt  package.xml
src/moveit_assistant/config/: aubo_i10.ros2_control.xacro  aubo_i10.srdf  aubo_i10.urdf.xacro  calibration.launch.py  joint_limits.yaml  moveit.rviz  moveit_controllers.yaml  ompl_planning.yaml  pilz_cartesian_limits.yaml  ros2_controllers.yaml  ros_gz_bridge_mbot_camera.yaml
src/moveit_assistant/joint_states/: joint_states.yaml
src/moveit_assistant/launch/: aubo_move_group.launch.py  calibration.launch.py  demo.launch.py  ign_moveit.launch.py  left_calibration.launch.py  move_group.launch.py  moveit_rviz.launch.py  right_calibration.launch.py  rsp.launch.py  setup_assistant.launch.py  spawn_controllers.launch.py  static_virtual_joint_tfs.launch.py  view_gz.launch.py  warehouse_db.launch.py
src/moveit_assistant/samples/: samples.yaml
src/moveit_assistant/worlds/: empty.sdf  panda_world.sdf
